Use platform snap-shot version as platform 4.1.x has not yey been released and we need the feature from 4.1 that lets the client set the packages name

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </scm>
 
     <properties>
-        <molgenis.dependency>4.0.0</molgenis.dependency>
+        <molgenis.dependency>4.1.0-SNAPSHOT</molgenis.dependency>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.12</slf4j.version>
         <logback.version>1.1.3</logback.version>
