--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.molgenis</groupId>
     <artifactId>molgenis-genetics</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-genetics-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>molgenis-genetics</name>
