--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.molgenis</groupId>
         <artifactId>molgenis-genetics</artifactId>
-        <version>1.0.0-GENETICS</version>
+        <version>1.0.1-GENETICS-SNAPSHOT</version>
     </parent>
     <artifactId>web-app</artifactId>
     <packaging>war</packaging>
